apps/system-services/ntfy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    name: ntfy
